# CIFAR-10

./: .gitignore  hc_model.py  main.py  math_utils.py  model.py  pyproject.toml  view.py
backend/: .gitignore  .pre-commit-config.yaml  pyproject.toml
backend/src/: main.py  server.py
backend/src/core/: factory.py  hc_model.py  layers.py  numpy_model.py  res_block.py  torch_model.py  torch_train.py
backend/src/data/: data_loader.py  norm_stats.py  tiny_imagenet_torch.py  torch_datasets.py
backend/src/nn/: losses.py  math.py  optimizers.py
backend/src/ui/: view.py
backend/src/utils/: helpers.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ModelViewer.tsx
frontend/src/lib/: api.ts
src/: hc_model.py  layer.py  main.py  model.py  view.py
src/core/: factory.py  hc_model.py  layers.py  model.py  numpy_model.py  res_block.py  torch_model.py  torch_train.py
src/data/: data_loader.py  norm_stats.py  tiny_imagenet_torch.py  torch_datasets.py
src/mathlib/: losses.py  mathlib.py
src/nn/: losses.py  math.py  optimizers.py
src/ui/: view.py
src/utils/: data_loader.py  helpers.py
utils/: helpers.py  losses.py  optimizers.py
